ViSP 2.4.3 (released ??, 2009)
  - New Features
    - Add vpFeaturePointPolar corresponding the a 2D image point with 
      polar coordinates visual feature.
----------------------------------------------	
ViSP 2.4.3-rc2 (released January 29, 2009)
  - Deprecated
    - Creation of a deprecated section in the online documentation that 
      gives the list of classes or member function that are deprecated
    - vpOSXcfoxGrabber was removed, since the C+Fox third party library 
      available at http://cfox.sourceforge.net/ was not updated since 2005.
    - vpIcCompGrabber was removed, since it uses a home made wrapper based 
      on itifg-7.2.1 driver which is not maintained yet
  - Testing
    - Use of CDash insteed of Dart2. Dashboards are sent to 
      http://cdash.irisa.fr/CDash/index.php?project=ViSP
  - Platform compatibility
    - Compatibility with g++ 4.3.0 coming with fedora 9
  - New Features
    - Add visp-config.bat under Windows to get the list of include dirs, 
      library dirs and libraries ViSP depends on. This may help users to 
      build a Visual Studio project from scratch and where ViSP is used as a 
      third party project
    - vpFeatureThetaU: Add cRcd feature, with ThetaU corresponding to the 
      rotation the camera has to achieve to move from current frame to the 
      desired one.
    - vpOpenCVGrabber: New framegrabber based on OpenCV third party library
      (useful for USB cameras).
    - vp1394TwoGrabber: Get the timestamp associated to the grabbed image.
    - vpV4l2Grabber: Get the timestamp associated to the grabbed image.
    - vpRobotAfma6 and vpAfma6: Modifications to be compatible with the new 
      low level Adept controller provided by Cerebellum Automation.
    - vpRobotAfma4 and vpAfma4: Modifications to be compatible with the new 
      low level Adept controller provided by Cerebellum Automation. New 
      vpServolens class to control the Servolens lens attached to the camera 